Moved into sub-folder

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -11,26 +11,26 @@ RUN apt-get update && apt-get install -y \
 ARG DOTNET_RID=linux-x64
 
 WORKDIR /src
-COPY SqlInfoStreamer.csproj .
-RUN dotnet restore SqlInfoStreamer.csproj
+COPY SqlInfoStreamer/SqlInfoStreamer.csproj ./SqlInfoStreamer/
+RUN dotnet restore SqlInfoStreamer/SqlInfoStreamer.csproj
 
 COPY . .
 
 # Build for specified platform
 RUN echo "Building for $DOTNET_RID" && \
-    dotnet publish SqlInfoStreamer.csproj \
+    dotnet publish SqlInfoStreamer/SqlInfoStreamer.csproj \
     -c Release \
     -r $DOTNET_RID \
     --self-contained \
-    -o /output && \
+    -o /build && \
     if [ "$DOTNET_RID" = "win-x64" ]; then \
-        cp /output/SqlInfoStreamer.exe /output/sql-info-streamer-$DOTNET_RID.exe; \
+        cp /build/SqlInfoStreamer.exe /build/sql-info-streamer-$DOTNET_RID.exe; \
     else \
-        cp /output/SqlInfoStreamer /output/sql-info-streamer-$DOTNET_RID; \
+        cp /build/SqlInfoStreamer /build/sql-info-streamer-$DOTNET_RID; \
     fi
 
 # Final stage to extract binaries
 FROM alpine:latest AS extractor
 WORKDIR /binaries
-COPY --from=builder /output/sql-info-streamer-* ./
+COPY --from=builder /build/sql-info-streamer-* ./
 RUN ls -la
